# OdooRPC

./: .gitignore  CMakeLists.txt  README.md  TODO.md  curl-rpc.sh  main.cpp  main2.cpp  odoorpc.py
src/: cookie.cpp  cookie.h  credentials.cpp  credentials.h  odoorpc.cpp  odoorpc.h
